Fixed alignment of checkbox in the grid toolbar

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/selector/dropdown/dropdown.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/selector/dropdown/dropdown.less
@@ -137,5 +137,8 @@
         display: none;
       }
     }
+    .grid .slick-row .slick-cell {
+      padding: 6px 8px 6px 15px;
+    }
   }
 }
