--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/treegrid/tree-grid.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/treegrid/tree-grid.less
@@ -33,11 +33,10 @@
     }
 
     .slick-cell {
-      .default-slick-cell-styling(6px 8px 4px 15px);
+      .default-slick-cell-styling(4px 8px 4px 2px);
       cursor: pointer;
       line-height: 37px;
       height: 50px; // firefox ignores SlickGrid.rowHeight
-      display: block;
 
       * {
         // force same cursor on every child
@@ -74,6 +73,7 @@
 
       .slick-cell-checkboxsel {
         min-width: 45px;
+        padding-left: 8px;
         line-height: normal;
 
         display: flex;
@@ -100,7 +100,7 @@
         }
 
         &:last-child {
-          padding-right: 10px;
+          padding-right: 20px;
         }
 
       }
